apps/keycloak/keycloak/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:26.8.0
          args:
            - start
          volumeMounts:
            - name: keycloak-providers
              mountPath: /opt/keycloak/providers
          ports:
            - containerPort: 8080
          startupProbe:
            httpGet:
              path: /health
              port: 9000
            initialDelaySeconds: 30
            timeoutSeconds: 1
            failureThreshold: 60
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health/live
              port: 9000
            initialDelaySeconds: 0
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 9000
            initialDelaySeconds: 10
            timeoutSeconds: 1
          resources:
            limits:
              memory: 1Gi
      restartPolicy: Always
      automountServiceAccountToken: false
      volumes:
        - name: keycloak-providers
          persistentVolumeClaim:
            claimName: keycloak-providers
