apps/keycloak/keycloak/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak-internal
  namespace: keycloak
spec:
  parentRefs:
    - name: internal
      namespace: envoy-gateway-system
      sectionName: internal-https
  hostnames:
    - sso.${BASE_DOMAIN}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: keycloak
          port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak-external
  namespace: keycloak
  annotations:
    cloudflare-operator.io/content: ${BASE_DOMAIN}
    cloudflare-operator.io/proxied: "false"
    cloudflare-operator.io/ttl: "1"
    cloudflare-operator.io/type: CNAME
spec:
  parentRefs:
    - name: external
      namespace: envoy-gateway-system
      sectionName: external-https
  hostnames:
    - sso.${BASE_DOMAIN}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: keycloak
          port: 8080
