apps/keycloak/keycloak/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  namespace: keycloak
  annotations:
    cloudflare-operator.io/content: ${BASE_DOMAIN}
    cloudflare-operator.io/type: CNAME
    nginx.ingress.kubernetes.io/proxy-buffering: "on"
    nginx.ingress.kubernetes.io/proxy-buffer-size: 8k
spec:
  ingressClassName: nginx
  rules:
    - host: sso.${BASE_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 8080
